IE 10-11 fix. Causing gap between content and menu

--- a/_src/sass/components/_page-main.scss
+++ b/_src/sass/components/_page-main.scss
@@ -8,6 +8,10 @@ main {
   @include breakpoint($medium) {
     padding: 0 $gridpad/4 245px;
   }
+
+  @include breakpoint($large) {
+    padding: 0;
+  }
   
   .contained {
     background: $white; 
